migrate logic (without extension) to new MPP plugin
which also means:
- migrate generation script to buildSrc/generation.kt

moreover:
- already move Test.java to new location as re-configuring
  kotlin MPP plugin regarding java srcDir seems to not work easily
  (in the end compileJava still searches in src/jvmTest/java and not at
  the other location).

--- a/apis/fluent-en_GB/atrium-api-fluent-en_GB-jvm/build.gradle
+++ b/apis/fluent-en_GB/atrium-api-fluent-en_GB-jvm/build.gradle
@@ -2,12 +2,12 @@ description = 'A fluent assertion function API in en_GB with a focus on code com
 
 ext.jacoco_additional = [
     prefixedProject('translations-en_GB'),
-    prefixedProject('logic-jvm'),
+    prefixedProject('logic'),
     prefixedProject("core"),
 ]
 
 dependencies {
-    api prefixedProject('logic-jvm')
+    api prefixedProject('logic')
     implementation niok()
 
     testImplementation prefixedProject('specs-jvm')
