--- a/misc/verbs/atrium-verbs-jvm/build.gradle
+++ b/misc/verbs/atrium-verbs-jvm/build.gradle
@@ -1,7 +1,7 @@
 description = 'Assertion verbs for Atrium for the JVM platform.'
 
 dependencies {
-    api prefixedProject('logic-jvm')
+    api prefixedProject('logic')
     api prefixedProject("core")
 
     testImplementation prefixedProject('specs-jvm')
