--- a/apis/fluent-en_GB/atrium-api-fluent-en_GB-common/build.gradle
+++ b/apis/fluent-en_GB/atrium-api-fluent-en_GB-common/build.gradle
@@ -1,7 +1,7 @@
 description = "A fluent assertion function API in en_GB with a focus on code completion as common module."
 
 dependencies {
-    api prefixedProject('logic-common')
+    api prefixedProject('logic')
 
     testImplementation prefixedProject('specs-common')
 }
