--- a/apis/infix-en_GB/atrium-api-infix-en_GB-jvm/build.gradle
+++ b/apis/infix-en_GB/atrium-api-infix-en_GB-jvm/build.gradle
@@ -2,12 +2,12 @@ description = 'An infix API in en_GB with a focus on code completion for JVM.'
 
 ext.jacoco_additional = [
     prefixedProject('translations-de_CH'),
-    prefixedProject('logic-jvm'),
+    prefixedProject('logic'),
     prefixedProject("core"),
 ]
 
 dependencies {
-    api prefixedProject('logic-jvm')
+    api prefixedProject('logic')
 
     testImplementation(prefixedProject('specs-jvm')) {
         exclude module: "${rootProject.name}-translations-en_GB"
