--- a/bundles/fluent-en_GB/atrium-fluent-en_GB-jvm/build.gradle
+++ b/bundles/fluent-en_GB/atrium-fluent-en_GB-jvm/build.gradle
@@ -3,7 +3,7 @@ description = 'Represents a convenience module which merely bundles dependencies
 ext.jacoco_additional = [
     prefixedProject('verbs-jvm'),
     prefixedProject('translations-en_GB'),
-    prefixedProject('logic-jvm'),
+    prefixedProject('logic'),
     prefixedProject("core"),
 ]
 
