--- a/logic/extensions/kotlin_1_3/atrium-logic-kotlin_1_3-common/build.gradle
+++ b/logic/extensions/kotlin_1_3/atrium-logic-kotlin_1_3-common/build.gradle
@@ -1,7 +1,7 @@
 description = 'The domain logic of the Kotlin 1.3 extension for Atrium as common module.'
 
 dependencies {
-    implementation prefixedProject('logic-common')
+    implementation prefixedProject('logic')
 
     // it is up to the consumer which atrium-translations module is used at runtime
     compileOnly prefixedProject('translations-en_GB')
