--- a/misc/verbs-internal/atrium-verbs-internal-common/build.gradle
+++ b/misc/verbs-internal/atrium-verbs-internal-common/build.gradle
@@ -2,7 +2,7 @@ description = 'Specifies the internally used assertion verbs as common module'
 
 dependencies {
     api prefixedProject("core")
-    api prefixedProject('logic-common')
+    api prefixedProject('logic')
 
     testImplementation prefixedProject('specs-common')
 }
