--- a/misc/verbs-internal/atrium-verbs-internal-js/build.gradle
+++ b/misc/verbs-internal/atrium-verbs-internal-js/build.gradle
@@ -2,7 +2,7 @@ description = 'Specifies the internally used assertion verbs for the JS platform
 
 dependencies {
     api prefixedProject("core")
-    api prefixedProject('logic-js')
+    api prefixedProject('logic')
 
     testImplementation prefixedProject('specs-js')
 }
