--- a/misc/verbs/atrium-verbs-common/build.gradle
+++ b/misc/verbs/atrium-verbs-common/build.gradle
@@ -1,7 +1,7 @@
 description = 'Assertion verbs for Atrium as common module.'
 
 dependencies {
-    api prefixedProject('logic-common')
+    api prefixedProject('logic')
     api prefixedProject("core")
 
     testImplementation prefixedProject('specs-common')
