--- a/apis/infix-en_GB/extensions/kotlin_1_3/atrium-api-infix-en_GB-kotlin_1_3-js/build.gradle
+++ b/apis/infix-en_GB/extensions/kotlin_1_3/atrium-api-infix-en_GB-kotlin_1_3-js/build.gradle
@@ -2,7 +2,7 @@ description = 'Kotlin 1.3 specific assertion functions and builders for infix-en
 
 dependencies {
     api prefixedProject('api-infix-en_GB-js')
-    api prefixedProject('logic-kotlin_1_3-js')
+    api prefixedProject('logic-kotlin_1_3')
 
     testImplementation prefixedProject('specs-js')
 }
