--- a/logic/extensions/kotlin_1_3/atrium-logic-kotlin_1_3-common/build.gradle
+++ b/logic/extensions/kotlin_1_3/atrium-logic-kotlin_1_3-common/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     // it is up to the consumer which atrium-translations module is used at runtime
     compileOnly prefixedProject('translations-en_GB')
 
-    testImplementation prefixedProject('specs-common')
+    testImplementation prefixedProject('specs')
 }
 
 
