--- a/logic/extensions/kotlin_1_3/atrium-logic-kotlin_1_3-js/build.gradle
+++ b/logic/extensions/kotlin_1_3/atrium-logic-kotlin_1_3-js/build.gradle
@@ -6,5 +6,5 @@ dependencies {
     // it is up to the consumer which atrium-translations module is used at runtime
     compileOnly prefixedProject('translations-en_GB')
 
-    testImplementation prefixedProject('specs-js')
+    testImplementation prefixedProject('specs')
 }
