--- a/bundles/infix-en_GB/atrium-infix-en_GB-common/build.gradle
+++ b/bundles/infix-en_GB/atrium-infix-en_GB-common/build.gradle
@@ -1,7 +1,7 @@
 description = 'Represents a convenience module which merely bundles dependencies as common module.'
 
 dependencies {
-    api prefixedProject('verbs-common')
+    api prefixedProject('verbs')
     api prefixedProject('api-infix-en_GB-common')
     api prefixedProject('translations-en_GB')
     api prefixedProject("core")
