--- a/misc/specs/atrium-specs-common/build.gradle
+++ b/misc/specs/atrium-specs-common/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     api prefixedProject("core")
     // exclude this dependency in case you want to use another translation
     api prefixedProject('translations-en_GB')
-    api prefixedProject('verbs-internal-common')
+    api prefixedProject('verbs-internal')
     api "io.mockk:mockk-common:$mockkVersion"
 
     implementation prefixedProject('api-fluent-en_GB-common')
