migrate api-fluent including extensions to new MPP plugin

--- a/apis/infix-en_GB/atrium-api-infix-en_GB-jvm/build.gradle
+++ b/apis/infix-en_GB/atrium-api-infix-en_GB-jvm/build.gradle
@@ -1,6 +1,6 @@
 description = 'An infix API in en_GB with a focus on code completion for JVM.'
 
-ext.jacoco_additional = [
+ext.jacocoAdditional = [
     prefixedProject('translations-de_CH'),
     prefixedProject('logic'),
     prefixedProject("core"),
