--- a/misc/specs/atrium-specs-js/build.gradle
+++ b/misc/specs/atrium-specs-js/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     api prefixedProject('verbs-internal')
     api "io.mockk:mockk-dsl-js:$mockkVersion"
 
-    implementation prefixedProject('api-fluent-en_GB-js')
+    implementation prefixedProject('api-fluent-en_GB')
 }
 
 dependencies {
