--- a/bundles/infix-en_GB/atrium-infix-en_GB-common/build.gradle
+++ b/bundles/infix-en_GB/atrium-infix-en_GB-common/build.gradle
@@ -2,7 +2,7 @@ description = 'Represents a convenience module which merely bundles dependencies
 
 dependencies {
     api prefixedProject('verbs')
-    api prefixedProject('api-infix-en_GB-common')
+    api prefixedProject('api-infix-en_GB')
     api prefixedProject('translations-en_GB')
     api prefixedProject("core")
 }
