--- a/bundles/infix-en_GB/atrium-infix-en_GB-jvm/build.gradle
+++ b/bundles/infix-en_GB/atrium-infix-en_GB-jvm/build.gradle
@@ -9,7 +9,7 @@ ext.jacocoAdditional = [
 
 dependencies {
     api prefixedProject('verbs')
-    api prefixedProject('api-infix-en_GB-jvm')
+    api prefixedProject('api-infix-en_GB')
     api prefixedProject('translations-en_GB')
     api prefixedProject("core")
 }
