move src of translation modules to default MPP layout

--- a/build.gradle
+++ b/build.gradle
@@ -180,7 +180,8 @@ configure(newMultiplatformProjects) { subproject ->
     def normalSrcLayout = [
         "atrium-verbs", "atrium-verbs-internal", "atrium-specs",
         "atrium-logic", "atrium-logic-kotlin_1_3",
-        "atrium-core"
+        "atrium-core",
+        "atrium-translations-de_CH","atrium-translations-en_GB",
     ]
 
     kotlin {
