--- a/misc/tools/readme-examples/build.gradle
+++ b/misc/tools/readme-examples/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 
     implementation kotlinStdlib()
     implementation prefixedProject("fluent-en_GB")
-    implementation niok()
+    implementation "ch.tutteli.niok:niok:$niokVersion"
     implementation spekExtensions()
 }
 
