update language level to kotlin 1.6

--- a/misc/tools/readme-examples/build.gradle
+++ b/misc/tools/readme-examples/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 }
 
 compileKotlin {
-    kotlinOptions.languageVersion = '1.3'
+//    kotlinOptions.languageVersion = '1.3'
 }
 
 def readme = task("readme", type: JavaExec, group: 'documentation') {
