--- a/build.gradle
+++ b/build.gradle
@@ -231,16 +231,17 @@ configure(newMultiplatformProjects) { subproject ->
 
             all {
                 languageSettings {
-                    languageVersion = '1.3'
-                    apiVersion = '1.3'
-                    useExperimentalAnnotation('kotlin.Experimental')
+                    languageVersion = '1.6'
+                    apiVersion = '1.6'
+                    optIn("kotlin.RequiresOptIn")
+//                    useExperimentalAnnotation('kotlin.Experimental')
                 }
             }
             configureEach {
                 if (it.name.endsWith("Test")) {
                     languageSettings {
-                        languageVersion = '1.3'
-                        apiVersion = '1.3'
+                        languageVersion = '1.6'
+                        apiVersion = '1.6'
                     }
                 }
             }
@@ -354,18 +355,18 @@ configure(subprojects - toolProjects - newMultiplatformProjects) { Project subpr
 }
 
 //allow kotlin 1.3 for kotlin_1_3 modules
-configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-common') }) {
-    compileKotlinCommon.kotlinOptions.languageVersion = '1.3'
-}
-configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-android') }) {
-    compileKotlin.kotlinOptions.languageVersion = '1.3'
-}
-configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-js') }) {
-    compileKotlin2Js.kotlinOptions.languageVersion = '1.3'
-}
-configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-jvm') }) {
-    compileKotlin.kotlinOptions.languageVersion = '1.3'
-}
+//configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-common') }) {
+//    compileKotlinCommon.kotlinOptions.languageVersion = '1.3'
+//}
+//configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-android') }) {
+//    compileKotlin.kotlinOptions.languageVersion = '1.3'
+//}
+//configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-js') }) {
+//    compileKotlin2Js.kotlinOptions.languageVersion = '1.3'
+//}
+//configure(subprojects.findAll { it.name.endsWith('-kotlin_1_3-jvm') }) {
+//    compileKotlin.kotlinOptions.languageVersion = '1.3'
+//}
 
 
 def apiProjects = subprojects.findAll {
