--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     rootProject.version = '0.19.0-SNAPSHOT'
     rootProject.group = 'ch.tutteli.atrium'
@@ -8,17 +9,16 @@ buildscript {
     ext {
         // main
         kboxVersion = '0.15.1'
-        kbox = { "ch.tutteli.kbox:kbox:$kboxVersion" }
         niokVersion = '1.4.7'
-        niok = { "ch.tutteli.niok:niok:$niokVersion" }
-        // keep in sync with /buildSrc/build.gradle.kts
-        kotlinVersion = '1.3.72'
+        // !!! keep in sync with /buildSrc/build.gradle.kts !!!
+        kotlinVersion = "1.4.32"
 
         // test
         jacocoToolVersion = '0.8.8'
         junitPlatformVersion = '1.9.1'
         jupiterVersion = '5.9.1'
         spekVersion = '2.0.12'
+        //TODO 0.19.0 check if we can already update to kotestVersion = '4.6.4'
         kotestVersion = '4.3.2'
         spekExtensionsVersion = '1.2.1'
         spekExtensions = { "ch.tutteli.spek:tutteli-spek-extensions:$spekExtensionsVersion" }
@@ -30,7 +30,6 @@ buildscript {
 
         // project setup
         tutteli_plugins_version = '0.33.1'
-        node_plugin_version = '3.5.1'
         d8_version = '1.6.84'
 
         // release
@@ -114,7 +113,6 @@ buildscript {
         classpath "ch.tutteli:tutteli-gradle-project-utils:$tutteli_plugins_version"
         classpath "ch.tutteli:tutteli-gradle-publish:$tutteli_plugins_version"
         classpath "ch.tutteli:tutteli-gradle-spek:$tutteli_plugins_version"
-        classpath "com.github.node-gradle:gradle-node-plugin:$node_plugin_version"
         classpath "io.github.gradle-nexus:publish-plugin:$gradle_nexus_publish_plugin_version"
     }
 }
@@ -153,8 +151,7 @@ subprojects {
     }
 }
 
-def commonProjects = getCommonProjects()
-def jsProjects = getJsProjects()
+
 
 def newMultiplatformProjects = newMultiplatformProjectNames.collect { prefixedProject(it) }
 configure(newMultiplatformProjects) { subproject ->
@@ -162,27 +159,21 @@ configure(newMultiplatformProjects) { subproject ->
 
     kotlin {
         jvm {
-            compilations.main.kotlinOptions {
-                jvmTarget = "11"
-            }
-            compilations.test.kotlinOptions {
-                jvmTarget = "11"
+            compilations.all {
+                kotlinOptions.jvmTarget = "11"
             }
 
             //for module-info.java and Java sources in test
             withJava()
 
-            def testProvider = testRuns["test"].executionTask
-            testProvider.configure {
+            testRuns["test"].executionTask.configure {
                 useJUnitPlatform {
                     includeEngines("spek2", "junit-jupiter", "kotest")
                 }
             }
         }
-        //TODO 0.19.0 activate as soon as all modules have been transitioned to new MPP
-//        js {
-//            nodejs()
-//        }
+        //TODO 0.21.0 switch from LEGACY to IR once we output Kotlin > 1.4
+        js(LEGACY) { nodejs() }
 
         targets.all {
             compilations.all {
@@ -194,20 +185,28 @@ configure(newMultiplatformProjects) { subproject ->
         sourceSets {
             commonMain {
                 dependencies {
-                    api(kotlin("stdlib-jdk8"))
+                    // TODO 0.20.0 shouldn't be necessary to add stdlib dependency to kotlin with kotlin 1.5.x (is automatically added)
+                    api(kotlin("stdlib-common"))
                     api(kotlin("reflect"))
                 }
             }
             commonTest {
                 dependencies {
+                    // TODO 0.20.0 switch to kotlin(test) with update to kotlin > 1.4
                     implementation kotlin('test-common')
                     implementation kotlin('test-annotations-common')
                 }
             }
-
+            jvmMain {
+                dependencies{
+                    // TODO 0.20.0 shouldn't be necessary to add the dependency to kotlin with kotlin 1.5.x (is automatically added, but check, maybe stdlib is added automatically but not stdlib-jdk8)
+                    api(kotlin("stdlib-jdk8"))
+                }
+            }
             jvmTest {
                 dependencies {
-                    implementation kotlin('test-junit')
+                    // TODO  0.20.0 should no longer be necessary with kotlin 1.5, adding kotlin('test') to common should be enough
+                    implementation kotlin('test-junit5')
                     runtimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
                     implementation("org.spekframework.spek2:spek-dsl-jvm:$spekVersion") {
                         exclude group: 'org.jetbrains.kotlin'
@@ -217,12 +216,18 @@ configure(newMultiplatformProjects) { subproject ->
                     }
                 }
             }
-            //TODO 0.19.0 activate once all are migrated to MPP
-//            jsTest {
-//                dependencies {
-//                    implementation kotlin('test-js')
-//                }
-//            }
+            jsMain {
+                dependencies{
+                    // TODO 0.20.0 shouldn't be necessary to add the dependency to kotlin with kotlin 1.5.x
+                    api(kotlin("stdlib-js"))
+                }
+            }
+            jsTest {
+                dependencies {
+                    // TODO  0.20.0 should no longer be necessary with kotlin 1.5, adding kotlin('test') to common should be enough
+                    implementation kotlin('test-js')
+                }
+            }
 
             all {
                 languageSettings {
@@ -276,9 +281,7 @@ configure(newMultiplatformProjects) { subproject ->
             subproject.compileModuleJava.configure {
                 dependsOn subproject.jvmMainClasses
 
-                //TODO 0.19.0 use this as soon as sources are in default folder for jvmMain
                 destinationDir = subproject.kotlin.jvm().compilations.main.output.classesDirs.getFiles().findAll { it.getPath().contains("kotlin") }[0]
-//                destinationDir = project.compileKotlin.destinationDir
                 doFirst {
                     options.compilerArgs = ['--module-path', classpath.asPath]
                     classpath = subproject.files()
@@ -290,16 +293,19 @@ configure(newMultiplatformProjects) { subproject ->
     moduleInfoReplaceMe()
 }
 
+//TODO 0.21.0 remove if we use kotlin 1.7.x should no longer be necessary
+tasks.withType(KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs = ["-Xopt-in=kotlin.RequiresOptIn"]
+    }
+}
+
 //TODO 0.19.0 cleanup this file once we have transitioned all modules to the new MPP plugin
-configureCommonProjects()
-configureAndroidProjects()
-configureJsProjects()
-configureJvmProjects()
 
 configure(subprojects.findAll {
     def parentName = it.projectDir.parentFile.name
     it.name != "bc-tests" && parentName != "old" && parentName != "bc-tests"
-} - commonProjects - jsProjects - newMultiplatformProjects) { subproject ->
+}  - newMultiplatformProjects) { subproject ->
     apply plugin: 'kotlin'
     dependencies {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
@@ -319,37 +325,28 @@ configure(subprojects.findAll {
     targetCompatibility = 11
 }
 
-configure(commonProjects) {
-    compileKotlinCommon {
-        kotlinOptions.languageVersion = '1.2'
-    }
-    compileTestKotlinCommon {
-        //TODO activate as soon as https://youtrack.jetbrains.com/issue/KT-30580 is fixed
-        kotlinOptions.allWarningsAsErrors = false
-    }
-}
-configure(jsProjects) { subProject ->
-    compileKotlin2Js {
-        kotlinOptions {
-            if (subProject.name.startsWith("atrium-translations")) {
-                //necessary as the module name is then also called atrium-translations-js and can be shared (the name) by the other translation modules
-                outputFile = "$buildDir/classes/kotlin/main/atrium-translations-js.js"
-            }
-            languageVersion = '1.2'
-        }
-    }
 
-    compileTestKotlin2Js {
-        //TODO activate as soon as https://youtrack.jetbrains.com/issue/KT-21348 is fixed
-        kotlinOptions.allWarningsAsErrors = false
-    }
-}
-
-def nonCommonAndJsProjects = subprojects - commonProjects - jsProjects
+//TODO 0.19.0 I guess this is still a problem when realising. Check new modules
+//configure(jsProjects) { subProject ->
+//    compileKotlin2Js {
+//        kotlinOptions {
+//            if (subProject.name.startsWith("atrium-translations")) {
+//                //necessary as the module name is then also called atrium-translations-js and can be shared (the name) by the other translation modules
+//                outputFile = "$buildDir/classes/kotlin/main/atrium-translations-js.js"
+//            }
+//            languageVersion = '1.2'
+//        }
+//    }
+//
+//    compileTestKotlin2Js {
+//        //TODO activate as soon as https://youtrack.jetbrains.com/issue/KT-21348 is fixed
+//        kotlinOptions.allWarningsAsErrors = false
+//    }
+//}
 
 
 //TODO 0.19.0 configure dokka plugins again also for newMultiplatformProjects
-configure(nonCommonAndJsProjects - toolProjects - newMultiplatformProjects) { Project subproject ->
+configure(subprojects - toolProjects - newMultiplatformProjects) { Project subproject ->
     apply plugin: 'ch.tutteli.dokka'
     apply plugin: 'ch.tutteli.kotlin.module.info'
 
@@ -394,8 +391,8 @@ configure(apiProjects) { apiProject ->
 
 def bundleSmokeTests = subprojects.findAll { it.name.contains('-smoke-test') }
 
-//TODO 0.19.0 newMultiPlatformProject have to be published differently
-configure(subprojects - bundleSmokeTests - toolProjects - newMultiplatformProjects - jsProjects) { subproject ->
+//TODO 0.19.0 newMultiPlatformProject have to be published differently, update to tutteli-gradle-plugins
+configure(subprojects - bundleSmokeTests - toolProjects - newMultiplatformProjects) { subproject ->
     apply plugin: 'ch.tutteli.publish'
 
     tutteliPublish {
@@ -408,6 +405,7 @@ configure(jacocoMulti.jacocoProjects + getAndroidProjects() - newMultiplatformPr
     apply plugin: 'ch.tutteli.spek'
     spek.version = spekVersion
 
+    //TODO 0.19.0 remove once we update to new tutteli-gradle-plugins
     // we don't want to have a dependency on dl.bintray anymore (the current version of ch.tutteli.spek (which is old)
     // still adds it for convenience reasons.
     repositories.removeAll {
@@ -442,11 +440,9 @@ configure(jacocoMulti.jacocoProjects + getAndroidProjects() - newMultiplatformPr
 
 // this is already configured for newMultiplatformProjects further above, thus the substraction
 configure(subprojects - toolProjects - newMultiplatformProjects) {
-    sourceSets {
-        all {
-            languageSettings {
-                useExperimentalAnnotation('kotlin.Experimental')
-            }
+    sourceSets.configureEach {
+        languageSettings {
+            useExperimentalAnnotation('kotlin.Experimental')
         }
     }
 }
@@ -486,91 +482,10 @@ configure(bundleSmokeTests) {
 }
 
 
+import org.jetbrains.kotlin.gradle.dsl.KotlinCompile
 import java.nio.file.Files
 import java.nio.file.Paths
 import java.util.stream.Collectors
-
-List<Project> projectNamesToProject(String[] names) {
-    names.collect { projectName -> prefixedProject(projectName) }
-}
-
-def createJsTestTask(String... subprojectNames) {
-    configure(projectNamesToProject(subprojectNames)) {
-        apply plugin: 'com.github.node-gradle.node'
-
-        compileTestKotlin2Js.configure {
-            kotlinOptions.moduleKind = "commonjs"
-            kotlinOptions.sourceMap = true
-            kotlinOptions.sourceMapEmbedSources = "always"
-        }
-
-        task populateNodeModules(type: Copy, dependsOn: compileKotlin2Js) {
-            from compileKotlin2Js.destinationDir
-
-            prefixedProject('verbs-internal').afterEvaluate {
-                // TODO 0.19.0, check if still required with the new Kotlin MPP plugin
-                configurations.testRuntimeClasspath.allDependencies.withType(ProjectDependency).each {
-                    dependsOn(it.dependencyProject.assemble)
-                }
-
-                configurations.testRuntimeClasspath.each {
-                    from zipTree(it.absolutePath).matching { include '*.js', '*.js.map' }
-                }
-            }
-
-            into "${buildDir}/node_modules"
-        }
-
-        def nodeModulesParentDir = file("$rootProject.projectDir/gradle/")
-        node {
-            download = true
-            npmVersion = '8.8.0'
-            workDir = file("$rootProject.projectDir/.gradle/nodejs")
-            npmWorkDir = file("$rootProject.projectDir/.gradle/npm")
-            nodeModulesDir = nodeModulesParentDir
-        }
-
-        task runMocha(type: NpxTask, dependsOn: [compileTestKotlin2Js, populateNodeModules]) {
-            command = "mocha"
-            args = [compileTestKotlin2Js.outputFile.toString()]
-        }
-        test.dependsOn runMocha
-    }
-}
-
-//TODO 0.19.0 this setup should no longer be necessary with the new js plugin, check once you re-activate JS target
-// if this is true, then remove the definition below including createJsTestTask above
-//TODO 0.19.0 enable JS-tests again once we use the new MPP plugins because then they should only re-run if something
-// changed, in contrast to now where they re-run all the time
-//if (Boolean.parseBoolean(System.getenv('CI'))) {
-//    createJsTestTask(
-//        'core-js',
-//        'api-fluent-en_GB',
-//        'api-infix-en_GB',
-//        'fluent-en_GB-js',
-//        'infix-en_GB-js'
-//    )
-//}
-
-def useJupiter(String... projectNames) {
-    configure(projectNamesToProject(projectNames)) {
-        dependencies {
-            testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
-        }
-        test {
-            options {
-                includeEngines 'junit-jupiter'
-            }
-        }
-    }
-}
-
-useJupiter(
-    //TODO 0.19.0 setup jupiter tests in a different way for new MPP
-//    'core-jvm',
-//    'api-fluent-en_GB',
-//    'api-infix-en_GB',
-)
 
 def getSubprojectTasks(String name) {
     return subprojects.collect { it.tasks.findByName(name) }.findAll { it != null }
